# marsyas

./: .gitignore  .qmake.cache  AUTHORS  CMAKE_TODO.txt  CMakeLists.txt  CTestConfig.cmake  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  PRE-0.3-TODO.txt  README  README.branch.gcc42  STYLE  THANKS  TODO  acinclude.m4  aclocal.m4  bootstrap  config.status  configure  configure.in  marsyas.vim  marsyasAll.pro  marsyasConfig.pri
apps/: Makefile.am  Makefile.in  apps.pro  consoleApps.pri
apps/ERBTest/: ERBTest.cpp  ERBTest.pro
apps/HWPSanalysis/: HWPSanalysis.cpp  HWPSanalysis.sln  HWPSnalsysis.pro
apps/MarEditor/: MarEditor.cpp  MarEditor.h  MarEditor.pro  MarEditor.rc  MarEditor.sln  SoundDevice.cpp  audioproperties.cpp  audioproperties.h  dockwindow.h  main.cpp
apps/Qt4Apps/: Makefile.am  Makefile.in  MarSystemQtWrapper.cpp  MarSystemQtWrapper.h  OscMapper.cpp  OscMapper.h  Qt4Apps.pri  Qt4Apps.pro  QtMarPlot.cpp  QtMarPlot.h  qoscclient.cpp  qoscserver.cpp  qoscserver.h  qosctypes.cpp  qosctypes.h
apps/SeneffEarTest/: SeneffEarTest.cpp  SeneffEarTest.pro
apps/backup/: Makefile.am  Makefile.in  netExtract.ms
apps/bextract/: bextract.cpp  bextract.sln  bextract.vcproj
apps/boomchick/: boomchick.cpp
apps/classifyFile/: classifyFile.cpp
apps/extract/: extract.cpp  extract.pro
apps/kea/: Makefile.am  kea.cpp  kea.pro  train.cpp  train.pro
apps/marsyasTests/: marsyasTests.cpp  marsyasTests.sln
apps/midiTest/: midiTest.cpp  midiTest.pro
apps/mixer/: mixer.cpp
apps/mkcollection/: mkcollection.cpp
apps/msl/: msl.cpp
apps/mudbox/: mudbox.cpp  mudbox.pro  mudbox.sln
apps/muggle/: mugle.cpp
apps/orcarecord/: orcarecord.cpp
apps/pePeakEval/: pePeakEval.cpp  pePeakEval.sln
apps/peVocoder/: peVocoder.cpp  peVocoder.sln
apps/peakClustering/: peakClustering.cpp  peakClustering.pro  peakClustering.sln  peakClustering.vcproj
apps/peakEval/: pePeakEval.cpp  pePeakEval.pro  peakEval.cpp  peakEval.pro  peakEval.sln
apps/peakSynth/: peVocoder.cpp  peVocoder.pro  peakSynth.cpp  peakSynth.sln
apps/phasevocoder/: phasevocoder.cpp  phasevocoder.pro  phasevocoder.sln  pvoc.bat  pvoc.ms
apps/pitchCorrect/: Makefile  analyze.cpp  analyze.h  findclosest.py  makescore.py  pitchCorrect.cpp  praat-to-pitch.py
apps/pitchextract/: pitchextract.cpp
apps/record/: record.cpp
apps/regressionChecks/: Makefile.am  Makefile.in  analysisChecks.cpp  basicChecks.cpp  common-reg.h  coreChecks.cpp  marsyasTests.cpp  regressionChecks.cpp  regressionChecks.pro
apps/scheduler/: scheduler.cpp
apps/sfinfo/: Makefile.am  Makefile.in  sfinfo.cpp
apps/sfplay/: Makefile.am  Makefile.in  sfplay.cpp  sfplay.pro
apps/sfplaygui/: sfplaygui.cpp  sfplaygui.pro
apps/sfplugin/: sfplugin.cpp
apps/speakerSeg/: speakerSeg.cpp  speakerSeg.sln
apps/tempo/: tempo.cpp
apps/textract/: textract.cpp
apps/train/: Makefile.am  train.cpp
apps/tutorial/: tutorial.cpp  tutorial.pro
apps/virtualsensor/: virtualsensor.cpp  virtualsensor.pro
apps/vocalEffort/: vocalEffort.cpp  vocalEffort.pro
distributed/: Makefile  Makefile.am  Makefile.in  collector.cpp  dispatcher.cpp  recvFFT.cpp  recvTCP.cpp  recvUDP.cpp  sendFFT.cpp  sendTCP.cpp  sendUDP.cpp
doc/: CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  architecture.texi  autotest.texi  build.texi  build_debian.texi  build_macosx.texi  build_windows.texi  configure.texi  contributing.texi  developing.texi  index.html.in  install.texi  interoperability.texi  intro.texi  macros.itexi  marsyas-cookbook.texi  marsyas-devel.texi  marsyas-user.texi  marsyas.css  marsyas.info  marsyas.texi  marsyasArchitecture1.eps  marsyasArchitecture1.txt  neptune_fileformats.txt  neptune_instructions.txt  neptune_modules.txt  programming.texi  qttools.texi  scripting.texi  system.texi  tests.texi  tools.texi  tour.texi  unsorted.texi  upload.sh  (+1 more)
doc/examples/: CMakeLists.txt  README-devel  controls.cpp  dataflow-split.cpp  do-nothing.cpp  gettingdata.cpp  helloworld.cpp  writefile.cpp
doc/images/: Makefile.am  Makefile.in  composite-accumulator.eps  composite-fanout.eps  composite-parallel.eps  composite-series.eps  dataflow.eps  explicit-patching.eps  feature-extraction.eps  implicit-filter-bank.eps  implicit-patching.eps  neural-explicit.eps  neural-implicit.eps  scheduler-class.eps  scheduler-tick.eps  slices.eps
doc/marsyas/: About-the-documentation.html  Accumulator.html  Architecture-limitations.html  Architecture.html  Assembling-a-network.html  Audio-and-MIDI.html  Building-the-dataflow-network.html  Collections-and-input-files.html  Collections.html  Compiling-Marsyas.html  Configure-Options.html  (+81 more)
marsyas/: ADSR.cpp  ADSR.h  AMDF.cpp  AMDF.h  ANN_node.cpp  ANN_node.h  AbsMax.cpp  AbsMax.h  AbsSoundFileSink.cpp  AbsSoundFileSink.h  AbsSoundFileSource.cpp  AbsSoundFileSource.h  AbsSoundFileSource2.cpp  AbsSoundFileSource2.h  Accumulator.cpp  Accumulator.h  Annotator.cpp  Annotator.h  AuFileSink.cpp  AuFileSink.h  AuFileSource.cpp  AuFileSource.h  AudioSink.cpp  AudioSink.h  AudioSink2.cpp  AudioSink2.h  AudioSource.cpp  AudioSource.h  AudioSource2.cpp  AudioSource2.h  AutoCorrelation.cpp  AutoCorrelation.h  BICchangeDetector.cpp  BICchangeDetector.h  BaseAudioSink.cpp  BaseAudioSink.h  BeatHistoFeatures.cpp  BeatHistoFeatures.h  Biquad.cpp  Biquad.h  (+477 more)
src/: CMakeLists.txt  CTestConfig.cmake  ChangeLog  ERBTest.cpp  LPCExample.cpp  Makefile  Makefile.am  Makefile.in  SeneffEarTest.cpp  batch.py  bextract.cpp  boomchick.cpp  classifyFile.cpp  config.h.in  dha2dhin2.txt  drumExtract.cpp  extract.cpp  ieee06.py  marNeptune.cpp  marsyasTests.cpp  midiTest.cpp  mixer.cpp  mkcollection.cpp  msl.cpp  mugle.cpp  netExtract.ms  orcarecord.cpp  peVocoder.cpp  peakClustering.cpp  phasevocoder.cpp  pitchextract.cpp  pvoc.ms  pvocJazz  record.cpp  scheduler.cpp  server_main.cpp  sfinfo.cpp  sfplay.cpp  sfplaygui.cpp  sfplugin.cpp  (+7 more)
swig/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.bindings  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  marcontrolptr.i  marsystem.i  realvec.i
(+4499 files in other folders)
