## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2002 George Tzanetakis 
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.


SUBDIRS = sfplay

# we can't include any directories in here, otherwise we'll get
# the .svn directories.  :(
EXTRA_DIST = ERBTest/*
EXTRA_DIST += MarEditor/Icons/*
EXTRA_DIST += MarEditor/M*
EXTRA_DIST += MarEditor/S*
EXTRA_DIST += MarEditor/[a-z]*

EXTRA_DIST += Qt4Apps/Makefile.*
EXTRA_DIST += Qt4Apps/MarGrid/*
EXTRA_DIST += Qt4Apps/MarPeaks/*
EXTRA_DIST += Qt4Apps/MarPhasevocoder/*
EXTRA_DIST += Qt4Apps/MarPlayer/images/*
EXTRA_DIST += Qt4Apps/MarPlayer/[A-Z]*
EXTRA_DIST += Qt4Apps/MarPlayer/main.cpp
EXTRA_DIST += Qt4Apps/MarPlayer/*
EXTRA_DIST += Qt4Apps/MarWidgets/*
EXTRA_DIST += Qt4Apps/Marx2DGraph/*
EXTRA_DIST += Qt4Apps/Marx2DGraphStacked/*
EXTRA_DIST += Qt4Apps/MarxGL2Din3DSpaceGraph/*
EXTRA_DIST += Qt4Apps/MarxGLGraph/*
EXTRA_DIST += Qt4Apps/MarxGLMultiBufferGraph/*
EXTRA_DIST += Qt4Apps/MarSystemQtWrapper.*
EXTRA_DIST += Qt4Apps/Qt4Apps.*
EXTRA_DIST += Qt4Apps/README
EXTRA_DIST += Qt4Apps/meaws/README
EXTRA_DIST += Qt4Apps/meaws/*.h
EXTRA_DIST += Qt4Apps/meaws/*.cpp
EXTRA_DIST += Qt4Apps/meaws/*.pro
EXTRA_DIST += Qt4Apps/meaws/*.qrc
EXTRA_DIST += Qt4Apps/meaws/music/*
EXTRA_DIST += Qt4Apps/meaws/progdata/*
EXTRA_DIST += Qt4Apps/meaws/testcalc/*

EXTRA_DIST += SeneffEarTest/*
EXTRA_DIST += *.p*
EXTRA_DIST += backup/plugins/*
EXTRA_DIST += backup/Makefile.*
EXTRA_DIST += backup/[a-n]*
EXTRA_DIST += backup/[s-t]*



